seafile/seafile-mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-mariadb
  namespace: seafile
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: seafile-mariadb
  template:
    metadata:
      labels:
        app: seafile-mariadb
    spec:
      containers:
      - image: mariadb:13.0.2
        name: seafile-mariadb
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 25m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 1G        
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: longhorn-pvc-seafile-mariadb-data
