seafile/seafile-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-server
  namespace: seafile
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: seafile-server
  template:
    metadata:
      labels:
        app: seafile-server
    spec:
      containers:
      - image: seafileltd/seafile-pro-mc:13.0.28
        name: seafile-server
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 2000Mi
          limits:
            cpu: 3000m
            memory: 8000Mi
        volumeMounts:
        - name: data
          mountPath: /shared
        ports:
          - containerPort: 80
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: longhorn-pvc-seafile-server-data
