seafile/seafile-server-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-server-ingressroute
  namespace: seafile
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`cloud.dysnomia.studio`)
    kind: Rule
    services:
    - name: seafile-server-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: seafile-tls-secret
